--- a/Shopify.Api/appsettings.json
+++ b/Shopify.Api/appsettings.json
@@ -1,8 +1,8 @@
 {
-  "ConnectionStrings": {
-    //"ShopifyConnection": "Server=DESKTOP-PQAKEF5\\SQLEXPRESS;Database=Shopify;TrustServerCertificate=true"
-    "ShopifyConnection": "Data Source=DESKTOP-PQAKEF5\\SQLEXPRESS;Initial Catalog=Shopify;Integrated Security=True;Trust Server Certificate=True"
-  },
+    "ConnectionStrings": {
+        //"ShopifyConnection": "Server=DESKTOP-PQAKEF5\\SQLEXPRESS;Database=Shopify;TrustServerCertificate=true"
+        "ShopifyConnection": "Data Source=DELL1549;Initial Catalog=Shopify;Integrated Security=True;Trust Server Certificate=True"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
