--- a/Shopify.Web/Shopify.Web.csproj
+++ b/Shopify.Web/Shopify.Web.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Shopify.Models\Shopify.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\Logos\" />
+  </ItemGroup>
+
 </Project>
