--- a/Shopify.Web/Shopify.Web.csproj
+++ b/Shopify.Web/Shopify.Web.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ReportViewModels\" />
     <Folder Include="wwwroot\Images\Logos\" />
   </ItemGroup>
 
