--- a/Shopify.Web/docker-compose.yml
+++ b/Shopify.Web/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   sqlserver:
     image: "mcr.microsoft.com/mssql/server:2022-latest"
     environment:
-      SA_PASSWORD: "Your_password123"
+      SA_PASSWORD: "!Bartosz2025"
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
